--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -19,6 +19,11 @@
     padding-top:40px;
     padding-bottom:10px;
 }
+
+.divEspaciado{
+    padding-top:10px;
+    padding-bottom:50px;
+}
 .degrade{
     /*background-image: linear-gradient(to right,white,white,white,#bebebe);*/
 }
