--- a/templates/documento/index.html.twig
+++ b/templates/documento/index.html.twig
@@ -27,7 +27,7 @@
     </div>
     {{ form_end(formulario) }}
     <div style="text-align:center;">
-        <a href="{{path('documentos')}}"><img src="{{ asset("svg/plus-circle.svg") }}" width="30" alt="Busqueda Avanzada"><p style="color:red;">Busqueda Avanzada: En desarrollo</p></a>
+        <a href="{{path('documentos')}}"><img src="{{ asset("svg/plus-circle.svg") }}" width="30" alt="Busqueda Avanzada"></a>
     </div>
 </div>
 <br>
@@ -65,8 +65,10 @@
                 <td><a class="btn btn-light" href="{{ path('verPDF', {'id': documento.id}) }}"><img src="{{ asset("svg/verPdf.svg") }}" class="svgMenu" alt="PDF">Ver</a></td>
                 <td>
                     {% if documento.estado=="Alta" %}
+                        {% if app.user.rolString=="Editor" %}
                         <a class="btn btn-success" href="{{ path('modificarDocumento', {'id': documento.id}) }}"><img src="{{ asset("svg/pencil.svg") }}" class="svgMenu" alt="Modificar"></a>
                         <a class="btn btn-danger" onclick="idObsoletear({{documento.id}})" data-toggle="modal" href="#ventanaModal"><img src="{{ asset("svg/trash.svg") }}" class="svgMenu" alt="Basura"></a>
+                        {% endif %}
                         {# Modal para cuando se basurea el documento. #}
                         <div class="modal fade" id="ventanaModal">
                             <div class="modal-dialog">
