--- a/templates/documento/verMas.html.twig
+++ b/templates/documento/verMas.html.twig
@@ -28,7 +28,7 @@
                 <h5>Título:</h5><h6>{{documento.titulo}}</h6>
             </div>
             <div class="col-sm-4">
-                <h5>Descripción:</h5><h6>{{documento.descripcion}}</h6>
+                <h5>Palabras claves:</h5><h6>{{documento.palabraClave}}</h6>
             </div>
             <div class="col-sm-4">
                 <h5>Perfil:</h5><h6>{{documento.perfil}}</h6>
