--- a/templates/usuario/editar.html.twig
+++ b/templates/usuario/editar.html.twig
@@ -41,7 +41,7 @@
                         {{ form_widget(formulario.rolString, {attr: {class: 'form-control campoForm'} }) }}  
                     </div>
                 </div>
-            
+                {{ form_widget(formulario.Modificar, {attr: {class: 'btn botonCeleste campoForm'} }) }}  
             </div>
             {{ form_end(formulario) }}
             
