--- a/templates/documento/index.html.twig
+++ b/templates/documento/index.html.twig
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
             Buscar
-            {{ form_widget(formulario.buscar, {attr: {class: 'form-control',placeholder: 'Escriba el número del documento..'} }) }}  
+            {{ form_widget(formulario.buscar, {attr: {class: 'form-control',placeholder: 'Número,año,título, o tipo acceso'} }) }}  
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
             Filtrar por<br>
@@ -26,9 +26,7 @@
     {{ form_widget(formulario.Buscar, {attr: {class: 'btn botonCeleste ancho'} }) }}  
     </div>
     {{ form_end(formulario) }}
-    <div style="text-align:center;">
-        <a href="{{path('documentos')}}"><img src="{{ asset("svg/plus-circle.svg") }}" width="30" alt="Busqueda Avanzada"></a>
-    </div>
+    
 </div>
 <br>
 <div class="container">
