--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -117,6 +117,7 @@
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
             <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
             <script src="{{ asset("js/validacionDocumento.js") }}"></script>
+            <script src="{{ asset("js/formularioDinamico.js") }}"></script>
             <script src="{{ asset("js/comportamientos.js") }}"></script>
             <script src="{{ asset("js/accionesDinamicas.js") }}"></script>
             <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.2/moment.min.js"></script>
