--- a/templates/documento_tipo/documentosTipo.html.twig
+++ b/templates/documento_tipo/documentosTipo.html.twig
@@ -54,13 +54,13 @@
         <h3 style="color:#fc447c;margin-top:10px;">Resultados</h3>
         <div style="padding:10px;">
             {% for grupo in grupos %}
-            <h3>{{grupo.nombre}}</h3>
+            <h3 style="color:grey;">{{grupo.nombre|upper}}</h3>
             <div style="">
                 {% for tipoDocumento in grupo.tipoDocumento %}
 
                     {% if tipoDocumento.nombre != 'Seleccionar' and tipoDocumento.estado == 'Alta' %}
                     <div style="border-left:3px solid #fc447c;margin-left:15px;">
-                        <h3>{{tipoDocumento.nombre}} #{{tipoDocumento.abreviacion}}</h3>
+                        <h4>{{tipoDocumento.nombre}} #{{tipoDocumento.abreviacion}}</h4>
                         <a href="{{ path('modificarDocumentoTipo', {'id': tipoDocumento.id}) }}">Modificar</a>
                         <a href="{{ path('eliminarDocumentoTipo', {'id': tipoDocumento.id}) }}">Eliminar</a>
                         <hr>
